--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,9 @@ LOG_LEVEL=info
 APP_KEY=
 NODE_ENV=development
 SESSION_DRIVER=cookie
+DB_CONNECTION=pg
 DB_HOST=127.0.0.1
 DB_PORT=5432
-DB_USER=root
-DB_PASSWORD=root
-DB_DATABASE=app
+DB_USER=
+DB_PASSWORD=
+DB_DATABASE=
