with Angular added

--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@adonisjs/eslint-config": "^2.0.0-beta.6",
     "@adonisjs/prettier-config": "^1.4.0",
     "@adonisjs/tsconfig": "^1.4.0",
+    "@angular/cli": "^21.0.4",
+    "@angular/compiler-cli": "^21.0.6",
     "@japa/assert": "^4.0.1",
     "@japa/plugin-adonisjs": "^3.0.1",
     "@japa/runner": "^3.1.4",
@@ -47,7 +49,7 @@
     "pino-pretty": "^13.0.0",
     "prettier": "^3.4.2",
     "ts-node-maintained": "^10.9.5",
-    "typescript": "~5.7",
+    "typescript": "^5.9.3",
     "vite": "^6.0.3"
   },
   "dependencies": {
@@ -58,9 +60,13 @@
     "@adonisjs/shield": "^8.1.1",
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^4.0.0",
+    "@angular/common": "^21.0.6",
+    "@angular/compiler": "^21.0.6",
+    "@angular/core": "^21.0.6",
+    "@angular/platform-browser": "^21.0.6",
+    "@angular/platform-browser-dynamic": "^21.0.6",
     "@dimerapp/markdown": "^8.0.1",
     "@vinejs/vine": "^3.0.0",
-    "edge.js": "^6.2.0",
     "luxon": "^3.5.0",
     "mysql2": "^3.12.0",
     "pg": "^8.13.3",
